tests/ui/no_parens_on_extends.rs
#[angstropass::langs]
mod langs {
    #[extends]
    mod baz {}
}

fn main() {}
